--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ schedule==1.2.0
 # API integrations
 instagrapi==1.18.4
 tiktok-api==0.10.5
-unsplash-python==1.0.0
+python-unsplash==1.1.0
 pexels-api==1.0.1
 openai==1.3.0
 buffer-python==1.0.0
